# xml-tv-santec

./: README.md  config.yaml  pyproject.toml
.github/workflows/: update-epg.yml
data/: state.json
data/csv/: en_KW03.csv  en_KW04.csv  en_KW05.csv  en_KW06.csv  en_KW07.csv  en_KW08.csv  en_KW09.csv  en_KW10.csv  en_KW11.csv  en_KW12.csv  en_KW13.csv  en_KW14.csv  en_KW15.csv  en_KW16.csv  en_KW17.csv  en_KW18.csv  en_KW19.csv  en_KW20.csv  es_KW13.csv  es_KW14.csv  es_KW15.csv  es_KW16.csv  es_KW17.csv  es_KW18.csv  es_KW19.csv  es_KW20.csv  pt_KW03.csv  pt_KW04.csv  pt_KW07.csv  pt_KW08.csv  pt_KW09.csv  pt_KW10.csv  pt_KW11.csv  pt_KW12.csv  pt_KW13.csv  pt_KW14.csv  pt_KW15.csv  pt_KW16.csv  pt_KW17.csv  pt_KW18.csv  (+2 more)
docs/: index.html  xmltv_en.xml  xmltv_es.xml  xmltv_pt.xml
output/: xmltv_en.xml  xmltv_es.xml  xmltv_pt.xml
src/xmltv_epg/: cli.py  config.py  fetcher.py  parser.py  util.py  xmltv.py
