[project]
name = "xmltv-epg-generator"
version = "0.1.0"
description = "Generate XMLTV EPG from weekly KW CSV files."
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "PyYAML>=6.0.1",
  "python-dateutil>=2.9.0.post0",
]

[project.scripts]
xmltv-epg = "xmltv_epg.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
